--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/MidEng/7.1
-/MidEng/7.2
-/MidEng/8.1
-/MidEng/8.2
-/MidEng/8.3
+# Ignore all files in the directory
+/MidEng/
+/DaSci/8.10.1/DSAI_8.10.1_files/
+
+# Ignore R history files
+.Rhistory
